# iaq-monitor-esp32

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  METRICS.md  PLAN.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
components/app_config/include/: iaq_config.h
components/connectivity/: CMakeLists.txt  idf_component.yml  mqtt_manager.c  wifi_manager.c
components/connectivity/certs/: README.md
components/connectivity/include/: mqtt_manager.h  wifi_manager.h
components/console_commands/: CMakeLists.txt  console_commands.c
components/console_commands/include/: console_commands.h
components/display_oled/: CMakeLists.txt  Kconfig.projbuild  display_driver.c  display_graphics.c  display_input.c  display_screens.c  display_ui.c  display_util.c  icons.h
components/display_oled/fonts/: u8x8_font_amstrad_cpc_extended_r.h  u8x8_font_chroma48medium8_r.h
components/display_oled/include/display_oled/: display_driver.h  display_graphics.h  display_input.h  display_screens.h  display_ui.h  display_util.h
components/iaq_data/: CMakeLists.txt  iaq_data.c
components/iaq_data/include/: iaq_data.h
components/iaq_history/: CMakeLists.txt  iaq_history.c
components/iaq_history/include/: iaq_history.h
components/iaq_json/: CMakeLists.txt  iaq_json.c
components/iaq_json/include/: iaq_json.h
components/iaq_profiler/: CMakeLists.txt  iaq_profiler.c
components/iaq_profiler/include/: iaq_profiler.h
components/log_control/: CMakeLists.txt  log_control.c
components/log_control/include/: log_control.h
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/power_board/: CMakeLists.txt  POWERFEATHER_INTEGRATION.md  power_board.cpp
components/power_board/include/: power_board.h  power_board_internal.h
components/power_board/powerfeather/Mainboard/: BQ2562x.cpp  LC709204F.cpp  Mainboard.cpp  Mainboard.h
components/power_board/powerfeather/Utils/: MasterI2C.cpp  MasterI2C.h  Mutex.cpp  Mutex.h
components/sensor_coordinator/: CMakeLists.txt  Kconfig.projbuild  metrics_calc.c  metrics_calc.h  sensor_coordinator.c  sensor_fusion.c  sensor_fusion.h
components/sensor_coordinator/include/: metrics_calc.h  sensor_coordinator.h  sensor_fusion.h
components/sensor_drivers/: CMakeLists.txt  GPIO_PINOUT.md  Kconfig.projbuild  bmp280_driver.c  i2c_bus.c  mcu_temp_driver.c  pms5003_driver.c  s8_driver.c  sensor_drivers.c  sensor_sim.c  sgp41_driver.c  sht41_driver.c  sht45_driver.c  uart_bus.c
components/sensor_drivers/include/: bmp280_driver.h  i2c_bus.h  mcu_temp_driver.h  pms5003_driver.h  s8_driver.h  sensor_drivers.h  sensor_sim.h  sgp41_driver.h  sht41_driver.h  sht45_driver.h  uart_bus.h
components/system_context/: CMakeLists.txt  pm_guard.c  system_context.c
components/system_context/include/: pm_guard.h  system_context.h
components/time_sync/: CMakeLists.txt  time_sync.c
components/time_sync/include/: time_sync.h
components/web_console/: CMakeLists.txt  web_console.c  web_console_internal.h  ws_console.c  ws_log.c
components/web_console/include/: web_console.h
components/web_portal/: API.md  CMakeLists.txt  FRONTEND_PLAN.md  Kconfig.projbuild  dns_server.c  web_portal.c
components/web_portal/certs/: generate_cert.sh  prvtkey.pem  servercert.pem
components/web_portal/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
components/web_portal/frontend/src/: App.tsx  theme.ts  vite-env.d.ts
components/web_portal/frontend/src/api/: client.ts  types.ts
components/web_portal/frontend/src/components/Charts/: ChartBufferStream.tsx  ChartCard.tsx  ChartContainer.tsx  ChartTile.tsx  LatestValueChip.tsx  MultiSeriesChart.tsx  PMChartTile.tsx  types.ts
components/web_portal/frontend/src/components/Charts/config/: chartConfig.ts
components/web_portal/frontend/src/components/Charts/hooks/: useChartData.ts  useHistoryQuery.ts
components/web_portal/frontend/src/components/Charts/utils/: chartUtils.ts
components/web_portal/frontend/src/components/Common/: ConfirmDialog.tsx  ErrorBoundary.tsx  FeaturedCardSkeleton.tsx  InfoDialog.tsx  InfoPrimitives.tsx  LoadingSkeleton.tsx  cardStyles.ts
components/web_portal/frontend/src/components/Config/: ConfigView.tsx  MQTTConfig.tsx  SensorControl.tsx  WiFiConfig.tsx
components/web_portal/frontend/src/components/Console/: CommandInput.tsx  ConsoleControls.tsx  ConsoleDashboard.tsx  LogViewer.tsx  TokenDialog.tsx
components/web_portal/frontend/src/components/Console/utils/: ansiParser.ts  types.ts
components/web_portal/frontend/src/components/Dashboard/: AQICard.tsx  ComfortCard.tsx  Dashboard.tsx  IAQCard.tsx  MetricsGrid.tsx  SensorCard.tsx
components/web_portal/frontend/src/components/Health/: HealthDashboard.tsx  MQTTHealth.tsx  SensorStatus.tsx  SystemHealth.tsx
components/web_portal/frontend/src/components/Layout/: AppBar.tsx  AppShell.tsx  ConnectionStatus.tsx  NavDrawer.tsx  ThemeToggle.tsx
components/web_portal/frontend/src/components/OTA/: FirmwareUpdate.tsx  FrontendUpdate.tsx  OTADashboard.tsx  UpdateProgress.tsx  VersionInfo.tsx  index.ts
components/web_portal/frontend/src/components/Power/: BatteryAlarms.tsx  BatteryStatus.tsx  ChargingConfig.tsx  PowerDashboard.tsx  PowerOutputs.tsx  SupplyStatus.tsx  index.ts
components/web_portal/frontend/src/components/System/: DataLayer.tsx  Providers.tsx  WebSocketBridge.tsx
components/web_portal/frontend/src/contexts/: SnackbarContext.tsx
components/web_portal/frontend/src/hooks/: useSensorStaleStatus.ts  useWebSocket.ts
components/web_portal/frontend/src/store/: atoms.ts  historyCache.ts
components/web_portal/frontend/src/utils/: constants.ts  formatting.ts  logger.ts  streamBuffers.ts  validation.ts
components/web_portal/include/: dns_server.h  web_portal.h
main/: CMakeLists.txt  Kconfig.projbuild  iaq_config.h  main.c
