idf_component_register(
    SRCS
        "display_driver.c"
        "display_graphics.c"
        "display_screens.c"
        "display_ui.c"
        "display_input.c"
        "display_util.c"
    INCLUDE_DIRS
        "include"
        "fonts"
        "."
    REQUIRES
        freertos
        driver
        esp_event
        esp_timer
        system_context
        time_sync
        iaq_data
        iaq_profiler
        sensor_drivers
        sensor_coordinator
        app_config
)
